Fix odd spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,6 +104,7 @@ td.line-number::before {
     background: transparent;
     border: none;
     font-family: "Fira Code", monospace;
+    padding: 0;
 }
 
 .submit:hover {
